fixbug：二分查找bug和多线程读写bug